--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -95,10 +95,14 @@ jobs:
         cd openwrt
         make defconfig
         make download -j8
-        pip3 install pyelftools
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
-
+        
+    - name: Install dependencies
+      id: elftools
+      run: |
+        pip3 install pyelftools
+        
     - name: Compile the firmware
       id: compile
       run: |
