--- a/.config
+++ b/.config
@@ -1,4 +1,4 @@
-#
+# 2024.12.31 0339
 # Automatically generated file; DO NOT EDIT.
 # LEDE Configuration
 #
@@ -2008,6 +2008,7 @@ CONFIG_PACKAGE_libiwinfo-data=y
 # CONFIG_PACKAGE_mt7622bt-firmware is not set
 # CONFIG_PACKAGE_mt7921bt-firmware is not set
 # CONFIG_PACKAGE_mt7922bt-firmware is not set
+# CONFIG_PACKAGE_mt7925bt-firmware is not set
 # CONFIG_PACKAGE_mt7981-wo-firmware is not set
 # CONFIG_PACKAGE_mt7986-wo-firmware is not set
 # CONFIG_PACKAGE_mt7988-2p5g-phy-firmware is not set
@@ -6567,14 +6568,7 @@ CONFIG_PACKAGE_nlbwmon=y
 # CONFIG_PACKAGE_obfs4proxy is not set
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-CONFIG_PACKAGE_odhcpd=y
-
-#
-# Configuration
-#
-CONFIG_PACKAGE_odhcpd_full_ext_cer_id=0
-# end of Configuration
-
+# CONFIG_PACKAGE_odhcpd is not set
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 
 #
